# jinja2-commentif

./: .gitignore  .travis.yml  LICENSE  requirements.txt  setup.cfg  setup.py  tox.ini
jinja2_commentif/: __init__.py  commentif.py  ext.py
tests/: test_commentif.py
