[metadata]
name = jinja2-commentif
version = 0.2
description = Jinja2 extension to automatically add a comment prefix on each line
author = Laurent COUSTET
author_email = ed@zehome.com
url = https://github.com/zehome/jinja2-commentif
requires-python = >=2.7,>=3.5
license:= BSD2

[options]
packages = find:
install_requires =
    Jinja2>=2.10
    Pygments>=2.2

[options.extras_require]
test = pytest

